# ocra-recipes

./: .gitignore  .travis.yml  CMakeLists.txt  OcraRecipesConfig.cmake.in  README.md
gocra/: CMakeLists.txt  README.md
gocra/examples/: CMakeLists.txt
gocra/examples/test_GHCJT/: CMakeLists.txt  Model3T.cpp  Model3T.h  main.cpp
gocra/include/: CMakeLists.txt
gocra/include/gocra/: GHCJTController.h  Model.h  OrthonormalFamily.h  Performances.h  gOcraDebug.h
gocra/include/gocra/Features/: gOcraFeature.h  gOcraPartialState.h
gocra/include/gocra/Models/: gOcraModel.h
gocra/include/gocra/Solvers/: OneLevelSolver.h  gOcraSolver.h
gocra/include/gocra/Tasks/: GHCJTTask.h  gOcraTaskManagerBase.h  gOcraTaskManagerCollectionBase.h
gocra/pkg-config/: CMakeLists.txt  gOcra.pc.in
gocra/src/: CMakeLists.txt  GHCJTController.cpp  OrthonormalFamily.cpp  gOcraDebug.cpp
gocra/src/Features/: gOcraFeature.cpp  gOcraPartialState.cpp
gocra/src/Models/: gOcraModel.cpp
gocra/src/Solvers/: OneLevelSolver.cpp  gOcraSolver.cpp
gocra/src/Tasks/: GHCJTTask.cpp  gOcraTaskManagerBase.cpp  gOcraTaskManagerCollectionBase.cpp
gocra/src/Tasks/Managers/: gOcraCoMTaskManager.cpp  gOcraContactSetTaskManager.cpp  gOcraContactTaskManager.cpp  gOcraFullPostureTaskManager.cpp  gOcraPartialPostureTaskManager.cpp  gOcraSegCartesianTaskManager.cpp  gOcraSegOrientationTaskManager.cpp  gOcraSegPoseTaskManager.cpp
hocra/: CMakeLists.txt
hocra/include/hocra/: HocraController.h
hocra/src/: HocraController.cpp
ocra/: CMakeLists.txt  OCRAConfigVersion.cmake.in
ocra-core/: CMakeLists.txt
ocra-core/include/ocra/: MathTypes.h
ocra-core/include/ocra/control/: DynamicEquationFunction.h  FullState.h  SFCController.h
ocra-core/include/ocra/optim/: Buffer.h  CoupledInputOutputSize.h  IFunction.h  IdentityFunction.h  LinearTask.h  ObserverSubject.h  QuadraticSolver.h  VariableMapping.h
ocra-core/src/control/: AbsoluteCoordinatesFunction.cpp  CoMTrackingFunction.cpp  ControlEquationFunction.cpp  ControlFrame.cpp  DynamicEquationFunction.cpp  ImpedanceController.cpp  ModelContacts.cpp  Task.cpp  TrackingFunction.cpp  controlUtils.cpp
ocra-core/src/optim/: CascadeQP.cpp  DotProductFunction.cpp  DoubleDiagonalLinearFunction.cpp  FSQPSolver.cpp  Function.cpp  LinearTask.cpp  OFSQP.cpp  RowFunction.cpp  Solver.cpp  TestFunction.cpp  Variable.cpp  WeightedSquareDistanceFunction.cpp
ocra-recipes/: CMakeLists.txt
ocra-recipes/include/ocra-recipes/: ClientCommunications.h  ClientManager.h  ControlThread.h  ControllerClient.h  ControllerServer.h  MessageVocabulary.h  RobotState.h  ServerCommunications.h  TaskConnection.h  TrajectoryThread.h
ocra-recipes/src/: ClientCommunications.cpp  ClientManager.cpp  ControlThread.cpp  ControllerClient.cpp  ControllerServer.cpp  RobotState.cpp  ServerCommunications.cpp  TaskConnection.cpp  TrajectoryThread.cpp
ocra/cmake/Modules/: FindOcra_framework.cmake
ocra/include/ocra/: MathTypes.h  utilities.h
ocra/include/ocra/control/: AbsoluteCoordinatesFunction.h  CoMFunction.h  CoMTrackingFunction.h  ContactAvoidanceConstraint.h  ContactSet.h  ControlConstraint.h  ControlEnum.h  ControlEquationFunction.h  ControlFrame.h  Controller.h  DynController.h  DynTask.h  DynamicEquationFunction.h  FFIDController.h  FFIDTask.h  Feature.h  FullDynamicEquationFunction.h  FullState.h  ImpedanceController.h  ImpedanceTask.h  JointLimitConstraint.h  Model.h  ModelContacts.h  SFCTask.h  (+12 more)
ocra/pkg-config/: CMakeLists.txt
ocra/src/: CMakeLists.txt
ocra/src/control/: AbsoluteCoordinatesFunction.cpp  CMakeLists.txt  CoMFunction.cpp  CoMTrackingFunction.cpp  ContactAvoidanceConstraint.cpp  ContactSet.cpp  ControlEquationFunction.cpp  ControlFrame.cpp  Controller.cpp  DynController.cpp  DynTask.cpp  DynamicEquationFunction.cpp  FFIDController.cpp  FFIDTask.cpp  Feature.cpp  FullDynamicEquationFunction.cpp  FullState.cpp  ImpedanceController.cpp  ImpedanceTask.cpp  JointLimitConstraint.cpp  Model.cpp  ModelContacts.cpp  OneLevelTask.cpp  PartialState.cpp  SFCController.cpp  SFCTask.cpp  StaticEquationFunction.cpp  Task.cpp  TaskState.cpp  TaskYarpInterface.cpp  TaskYarpInterfaceVocab.cpp  TorqueLimitConstraint.cpp  TrackingFunction.cpp  WeightedSquaredSumOfControlEquationsFunction.cpp  controlUtils.cpp
ocra/src/optim/: BoundFunction.cpp  CMakeLists.txt  CascadeQP.cpp  CascadeQPSolver.cpp  CmlQuadraticSolver.cpp  Constraint.cpp  DiagonalLinearFunction.cpp  DotProductFunction.cpp  DoubleDiagonalLinearFunction.cpp  FSQPConstraintManager.cpp  FSQPSolver.cpp  FcQuadraticFunction.cpp  Function.cpp  FunctionUtilities.cpp  IFunctionProperties.cpp  IdentityFunction.cpp  LinearFunction.cpp  LinearTask.cpp  LinearizedCoulombFunction.cpp  MergedVariable.cpp  NamedInstance.cpp  NewtonSolver.cpp  OFSQP.cpp  ObjQLD.cpp  OneLevelSolver.cpp  QLDSolver.cpp  QuadProg++.cpp  QuadraticFunction.cpp  QuadraticSolver.cpp  RowFunction.cpp  SecondOrderLinearTask.cpp  Solver.cpp  SolverUtilities.cpp  SquaredLinearFunction.cpp  SubtractionFunction.cpp  SumOfLinearFunctions.cpp  TestFunction.cpp  Variable.cpp  VariableChiFunction.cpp  VariableMapping.cpp  (+3 more)
ocra/src/util/: FileOperations.cpp
solvers/quadprog/: CMakeLists.txt  QUADPROGConfig.cmake.in
solvers/quadprog/src/: QuadProg++.cpp
wocra/: CMakeLists.txt  README.txt
wocra/include/wocra/: Model.h  Performances.h  WocraController.h  WocraDebug.h  wOcraController.h  wOcraDebug.h
wocra/src/: CMakeLists.txt  WocraController.cpp  WocraDebug.cpp  wOcraController.cpp  wOcraDebug.cpp
wocra/src/Constraints/: ContactAvoidanceConstraint.cpp  JointLimitConstraint.cpp  TorqueLimitConstraint.cpp  wOcraConstraint.cpp
wocra/src/Features/: wOcraFeature.cpp  wOcraPartialState.cpp
wocra/src/Models/: wOcraModel.cpp
wocra/src/Solvers/: OneLevelSolver.cpp  wOcraSolver.cpp
wocra/src/Tasks/: wOcraTask.cpp  wOcraTaskManagerBase.cpp  wOcraTaskParser.cpp  wOcraTaskSequenceBase.cpp
wocra/src/Trajectory/: wOcraExperimentalTrajectory.cpp  wOcraGaussianProcessTrajectory.cpp  wOcraLinearInterpolationTrajectory.cpp  wOcraMinimumJerkTrajectory.cpp  wOcraTrajectory.cpp
(+215 files in other folders)
