# Library constants
IF(WIN32)
	SET(LIBDIR_KW "/LIBPATH:")
	SET(LIBINCL_KW "")
	SET(LIB_EXT ".lib")
ELSEIF(UNIX)
	SET(LIBDIR_KW "-L")
	SET(LIBINCL_KW "-l")
	SET(LIB_EXT "")
ENDIF(WIN32)

# pkgconfig configuration for .pc generation
SET(PKG_CONFIG_PREFIX "${CMAKE_INSTALL_PREFIX}")
SET(PKG_CONFIG_EXEC_PREFIX "${PKG_CONFIG_PREFIX}")
SET(PKG_CONFIG_LIBDIR "${PKG_CONFIG_EXEC_PREFIX}/lib")
SET(PKG_CONFIG_INCLUDEDIR "${PKG_CONFIG_PREFIX}/include")

SET(PKG_CONFIG_PROJECT_NAME "${PROJECT_NAME}")
SET(PKG_CONFIG_DESCRIPTION "${PROJECT_DESCRIPTION}")
SET(PKG_CONFIG_URL "${PROJECT_URL}")
SET(PKG_CONFIG_VERSION "${PROJECT_VERSION}")
SET(PKG_CONFIG_REQUIRES "ocra_framework, quadprog")
SET(PKG_CONFIG_LIBS "${LIBDIR_KW}${CMAKE_INSTALL_PREFIX}/lib")
SET(PKG_CONFIG_CFLAGS "-I${CMAKE_INSTALL_PREFIX}/include")

# Where to install the pkg-config file?
SET(PKG_CONFIG_DIR "${PKG_CONFIG_LIBDIR}/pkgconfig")

# Set the name of the library for linking
IF(CMAKE_BUILD_TYPE MATCHES Debug)
    SET(PKG_CONFIG_LIBS "${PKG_CONFIG_LIBS} ${LIBINCL_KW}${PROJECT_NAME}${CMAKE_DEBUG_POSTFIX}${LIB_EXT}")
    SET(PKG_DESTINATION_FILE_NAME "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}_dbg.pc")
ELSE()
    SET(PKG_CONFIG_LIBS "${PKG_CONFIG_LIBS} ${LIBINCL_KW}${PROJECT_NAME}${LIB_EXT}")
    SET(PKG_DESTINATION_FILE_NAME "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc")
ENDIF()


# Configuration of installation
INSTALL(
	FILES ${PKG_DESTINATION_FILE_NAME}
    DESTINATION lib/pkgconfig
    PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE
	)

CONFIGURE_FILE(
	"${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pc.in"
    ${PKG_DESTINATION_FILE_NAME}
    )
